--- a/miniprogram-1/pages/changePsd/changePsd.wxml
+++ b/miniprogram-1/pages/changePsd/changePsd.wxml
@@ -9,6 +9,6 @@
   <text>确认密码</text>
   <input password='true' name='newpwd2' placeholder='请确认一遍新密码' />
 </mp-cell>
-<button type='primary' form-type='submit' class="btn">提交</button>
+<button form-type='submit' class="btn">提交</button>
 </mp-cells>
 </form>
