--- a/miniprogram-1/pages/myCourse/myCourse.wxml
+++ b/miniprogram-1/pages/myCourse/myCourse.wxml
@@ -1,9 +1,9 @@
 <import src="mycourse-template/mycourse-template.wxml"></import>
-<view class="myCourse" wx:if="{{myCourseList.length!=0}}">
+<view class="no-class" wx:if="{{token != '' || token != null}}">暂无课程,快去选课吧！</view>
+<view class="myCourse" wx:else>
   <section class="myCourseList">
     <navigator class="course" url="/pages/course/course?courseId={{item.id}}" wx:for="{{myCourseList}}" wx:key="id">
       <template is="myCourseList" data="{{...item}}"></template>
     </navigator>
   </section>
 </view>
-<view class="no-class" wx:else>暂无课程,快去选课吧！</view>
