--- a/miniprogram-1/pages/usercenter/usercenter.wxss
+++ b/miniprogram-1/pages/usercenter/usercenter.wxss
@@ -54,7 +54,25 @@
 }
 
 .weui-vcode-img {
-  width: 60px;
-  height: 60px;
+  width: 150rpx;
+  height: 300rpx;
   border-radius: 50%;
+}
+
+page {
+  background: #f2f2f2;
+}
+
+.container {
+  width: 100%;
+}
+
+.switch-tab {
+  width: 100%;
+  background: #fff;
+  box-shadow: 0rpx 9rpx 9rpx 0rpx rgba(194, 190, 190, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
 }
