--- a/miniprogram-1/component/FooBar/FooBar.wxml
+++ b/miniprogram-1/component/FooBar/FooBar.wxml
@@ -1,4 +1,4 @@
 <view class="fooBar">
-  <image class="pic" src="/images/miniketang.jpg"></image>
+  <image class="pic" src="/images/miniketang.jpg" mode="widthFix"></image>
   <view class="text">-- designed by xlc --</view>
 </view>
